fixed bug where the screen width exceeded 100% resultnig in horizontal scroll

--- a/style/styles.css
+++ b/style/styles.css
@@ -98,11 +98,12 @@ header{
 	box-shadow: 0px 1px 5px rgb(110, 109, 109);
 }
 header nav{
-	width: 100vw;
+	width: 90%;
 	display: flex;
 	justify-content: flex-start;
 	position: relative;
     left: 40px;
+	max-width: 100%;
 }
 header nav a{
 	color: #bb86fc;
@@ -292,6 +293,11 @@ header nav{
 	width: 100vw;
 	position: relative;
 	right:0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+    left: 0px;
+	max-width: 100%;
 }
 header nav a{
 	color: #bb86fc;
